<resources>
    <string name="app_name">MovieApp</string>
    <string name="API_KEY">3c15dbf274c6641b91228b202383fdc9</string>
    <string name="BASE_URL">http://api.themoviedb.org/3/movie/</string>
    <string name="more_info">MORE INFO</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="action_drama_romance">action,drama,romance</string>
    <string name="top_rated">Top Rated</string>
    <string name="rating">Rating</string>
    <string name="run_time">Run Time</string>
    <string name="watch_trailer">Watch Trailer</string>
</resources>
