<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/overlay_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="185dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="52dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="TITle"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="romance,action"
                        android:textColor="@color/color_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/fav_image"
                        android:src="@drawable/fav_un"
                        android:layout_marginLeft="16dp"
                        android:paddingTop="16dp"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_rating_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="0.3"
                    android:text="@string/rating"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_weight="0.3"
                    android:text="Status"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_runtime_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.3"
                    android:text="@string/run_time"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_rating_value_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.3"
                    android:text="7.2"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.3"
                    android:text="Date"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_duration_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.3"
                    android:text="120 min"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:text="description"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_small"
                android:scrollbars="vertical"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/watch_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shaped_view"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/watch_trailer"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_med"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/casts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="Casts"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_med"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/casts_recycleview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="55dp"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.bottomappbar.BottomAppBar
        android:id="@+id/bottom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="36dp"
        app:backgroundTint="#99000000"
        app:buttonGravity="bottom|top"
        app:fabAlignmentMode="end"></android.support.design.bottomappbar.BottomAppBar>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        android:src="@drawable/arrow_back_24dp"
        app:layout_anchor="@id/bottom_actionbar" />

</android.support.design.widget.CoordinatorLayout>






